...
                      // Playlist details
                      Column(
                          modifier = Modifier.fillMaxHeight(),
                          verticalArrangement = Arrangement.SpaceBetween) {
                            IconWithText(
                                "@" + selectedPlaylistState.playlistOwner,
                                "ownerText",
                                Icons.Outlined.AccountCircle,
                                TypographyPlaylist.headlineMedium)
                            if (collabUsernames.isNotEmpty()) {
                              IconWithText(
                                  collabUsernames.joinToString(", "),
                                  "collaboratorsText",
                                  collab,
                                  TypographyPlaylist.headlineSmall,
                                  2)
                            }
                            IconWithText(
                                if (selectedPlaylistState.playlistPublic) "Public" else "Private",
                                "publicText",
                                Icons.Outlined.Lock,
                                TypographyPlaylist.headlineSmall)

                            IconWithText(
                                "${selectedPlaylistState.nbTracks} tracks",
                                "nbTracksText",
                                Icons.Outlined.Star,
                                TypographyPlaylist.headlineSmall)
                            Spacer(modifier = Modifier.height(10.dp))
                            ViewDescriptionButton { showDialogOverlay = true }
                          }
                    }
...
                    "addToThisPlaylistButton",
                    onClick = { navigationActions.navigateTo(ADD_TRACK_TO_PLAYLIST) })
                Spacer(modifier = Modifier.height(16.dp))
              }

              if (isOwner) {
                PrincipalButton("Export this playlist", "exportButton") {
                  if (selectedPlaylistState.nbTracks > 0) {
                    showTrackSelectionDialog = true
                  } else {
                    Toast.makeText(context, "No songs added to playlist", Toast.LENGTH_SHORT).show()
                  }
                }
...

              // Display Tracks or Empty State
              if (selectedPlaylistState.nbTracks == 0) {
                Text(
                    text = "NO SONGS ADDED",
                    style = TypographyPlaylist.displayMedium,
                    modifier = Modifier.padding(top = 165.dp).testTag("emptyPlaylistPrompt"))
              } else {
                Box(modifier = Modifier.fillMaxSize().heightIn(min = 0.dp, max = 6000.dp)) {
                  LazyColumn(
                      verticalArrangement = Arrangement.Top,
                      contentPadding = PaddingValues(horizontal = 16.dp, vertical = 16.dp),
                      modifier = Modifier.fillMaxSize()) {
...
                text =
                    "Are you sure you want to export this playlist to Spotify? Once exported, the playlist will be removed from the app and cannot be recovered.",
                style = MaterialTheme.typography.bodyMedium)
            Spacer(modifier = Modifier.height(8.dp))
          }
        },
        confirmButton = {
          TextButton(
              modifier = Modifier.testTag("confirmButton"),
              onClick = {
                exportPlaylist(
                    context = context,
                    coroutineScope = coroutineScope,
...
              }) {
                Text("Confirm")
              }
        },
        dismissButton = {
          TextButton(
              modifier = Modifier.testTag("cancelButton"), onClick = { showDialogExport = false }) {
                Text("Cancel")
              }
        })
  }
}

...
    tracksNumber: Int,
    onDismissRequest: () -> Unit,
    onNumberSelected: (Int) -> Unit
) {
  androidx.compose.ui.window.Dialog(onDismissRequest = onDismissRequest) {
    Surface(
        modifier = Modifier.fillMaxHeight(0.5F).testTag("trackSelectionDialog"),
        shape = RoundedCornerShape(16.dp),
        tonalElevation = 4.dp,
        border = BorderStroke(2.dp, PrimaryGradientBrush)) {
          Scaffold(
              topBar = {
                TopAppBar(
...
                              onClick = { onNumberSelected(i) })
                        }
                      }
                      if (maxIteration % 10 != 0) {
                        PrincipalButton(
                            buttonText = "All (${maxIteration})",
                            buttonTag = "AllTracksSelectedButton",
                            onClick = { onNumberSelected(tracksNumber) })
                      }
                    }
              },
              bottomBar = {
                BottomAppBar(
...
