...
              .clickable { onClick() }
              .semantics { contentDescription = "View Description" }
              .background(
                  color = MaterialTheme.colorScheme.surfaceVariant,
                  shape = RoundedCornerShape(size = 20.dp))
              .padding(start = 16.dp, end = 16.dp)
              .testTag("viewDescriptionButton")) {
        Text(
            text = "View Description",
            maxLines = 1,
            overflow = TextOverflow.Ellipsis,
            style = MaterialTheme.typography.labelSmall,
            color = MaterialTheme.colorScheme.primary,
...
                      if (isVoted) PositiveGradientBrush
                      else Brush.verticalGradient(listOf(Color.Transparent, Color.Transparent)))
              .clickable {
                // Notify the ViewModel about the vote change
                onVoteChanged(playlistTrack.track.trackId, !isVoted)
              }
              .testTag("voteButton")) {
        Row(
            modifier = Modifier.fillMaxSize().padding(horizontal = 10.dp),
            horizontalArrangement = Arrangement.Start,
            verticalAlignment = Alignment.CenterVertically) {
              Icon(
                  painter = painter,
...
