...
import com.epfl.beatlink.ui.theme.PositiveGradientBrush
import com.epfl.beatlink.ui.theme.TypographySongs

@Composable
fun TrackVoteCard(spotifyTrack: SpotifyTrack) {
  Card(
      modifier = Modifier.fillMaxSize().testTag("trackVoteCard"),
      colors = CardDefaults.cardColors(containerColor = Color.Transparent)) {
        Row(modifier = Modifier.fillMaxSize(), verticalAlignment = Alignment.CenterVertically) {
          Image(
              painter = painterResource(id = R.drawable.cover_test1), // TODO
              contentDescription = "Playlist cover",
              modifier = Modifier.size(55.dp).padding(horizontal = 6.dp))
...
