...
    alignment: Alignment = Alignment.BottomCenter,
    overlayContent: @Composable () -> Unit
) {
  // Semi-transparent background overlay
  Box(
      modifier =
          Modifier.testTag("overlay")
              .fillMaxSize()
              .background(Color.Black.copy(alpha = 0.4f))
              .pointerInput(Unit) { detectTapGestures(onTap = { onDismissRequest() }) },
      contentAlignment = alignment) {
        // Inner box to hold the overlay content
        Box(
...
